delete some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# folders
+workspace/
+
 # Logs
 logs
 *.log
@@ -17,10 +20,3 @@ dist-ssr
 !.vscode/extensions.json
 .idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-workspace/
