--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# folders
-workspace/
-
 # Logs
 logs
 *.log
@@ -20,3 +17,8 @@ dist-ssr
 !.vscode/extensions.json
 .idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
